--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -22,13 +23,13 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.7.1",
     "moment": "^2.29.4",
+    "mongoose": "^5.13.14",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "require-all": "^3.0.0",
     "swagger-ui-express": "^4.6.0",
-    "uuid": "^9.0.0",
-    "mongoose": "^5.13.14"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
