--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "require-all": "^3.0.0",
+    "stripe": "^11.6.0",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   },
